--- a/about.html
+++ b/about.html
@@ -231,7 +231,7 @@
                     <h2>Our History</h2>
                     <h3 class="text-dark" style="margin-top: 20px;">Our Most Efficient Year</h3>
                 </div>
-                <div class="col-lg-7 py-3 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-6 col-sm-7 mt-4 py-3 wow fadeInUp" data-wow-delay="0.1s">
                     <h3 class="m-2  wow " style="color: black;">RAJA ROY PRAMOTORS,2021</h3>
                     <p class=" m-2 mt-3">
                         Established in 2021, RAJA ROY PRAMOTORS emerged from a deep-rooted passion for real estate and a profound desire to positively impact lives. From humble beginnings, our dedicated team has strived to exceed expectations, delivering exceptional real estate services tailored to each client's unique needs. Rooted in integrity, professionalism, and personalized attention, we've cultivated a vast network of satisfied clients, fueling our growth and expansion in the dynamic real estate arena.
@@ -239,7 +239,7 @@
                         With an unwavering commitment to integrity, professionalism, and excellence, RAJA ROY PRAMOTORS has flourished amidst the ever-evolving real estate landscape. Our journey has been characterized by innovation and growth, propelled by our steadfast dedication to personalized service and client satisfaction. At every juncture, we reaffirm our pledge to turn dreams into realities, empowering individuals to achieve their property aspirations with confidence and trust.
                     </p>
                 </div>
-                <div class="col-lg-5 about-img">
+                <div class="col-lg-6 col-sm-5 about-img">
                     <img src="./img/open1.png" 
                         class="img-fluid wow fadeInUp w-100  py-2 my-5"  data-wow-delay="0.1s" />
                 </div>
@@ -253,7 +253,7 @@
                 <div class="text-center col-lg-12 py-1 my-2 wow fadeInUp" data-wow-delay="0.1s">
                     <h3 class="text-white">Our Vision</h3>
                 </div>
-                <div class="col-lg-7 py-3  mb-1 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-6  py-3 mt-4  mb-1 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="m-2 text-white">At Vision Real Estate, we're committed to setting a new standard of excellence in the real estate industry. Our mission is to deliver innovative, sustainable, and community-focused solutions that inspire and transform lives. With a keen eye on the future, we leverage integrity, collaboration, and market insights to anticipate trends and seize emerging opportunities. Whether it's crafting residential developments that prioritize comfort and connectivity or commercial projects that drive economic growth, exceeding client expectations is our top priority.
 
                         Central to our vision is a steadfast commitment to sustainability and environmental responsibility. We understand the importance of minimizing our ecological footprint and embrace green building practices and energy-efficient technologies. By prioritizing sustainability, we not only create healthier communities but also contribute to safeguarding the planet for future generations.</p>
@@ -261,17 +261,17 @@
 
                         Join us at Vision Real Estate as we lead the charge towards a more vibrant and sustainable tomorrow. Experience the difference with our community-centric approach and environmentally conscious practices, and together, let's shape a future where excellence, innovation, and sustainability go hand in hand.</p>
                 </div>
-                <div class="col-lg-5 about-img" ><img src="./img/vision2.jpg"  class="my-5 img-fluid py-2 w-100  wow fadeInUp"
+                <div class="col-lg-6 col-sm-5 about-img" ><img src="./img/vision2.jpg"  class="my-5 img-fluid py-2 w-100  wow fadeInUp"
                         data-wow-delay="0.1s" /></div>
             </div>
         </div>
         <!-- mission start -->
         <div class="container">
             <div class="row">
-                <div class="text-center col-lg-12 py-1 my-2 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="text-center  col-lg-12 py-1 my-2 wow fadeInUp" data-wow-delay="0.1s">
                     <h3 class="text-dark">Our Mission</h3>
                 </div>
-                <div class="col-lg-7 py-3  mb-1 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-6 py-3 mt-4  mb-1 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="m-2">
                         At Raja Roy Promoters, our mission goes beyond the conventional realm of real estate transactions. We aspire to be more than just facilitators; we strive to become trusted advisors, guiding our clients through every stage of their real estate journey with unwavering integrity, transparency, and professionalism. Our commitment lies in understanding the distinct needs and aspirations of each client, tailoring our services to not just meet but exceed their expectations. Whether it's assisting first-time homebuyers, supporting growing families, or advising seasoned investors, we are dedicated to delivering bespoke solutions that align perfectly with our clients' objectives.</p>
                     <p class="m-2">Furthermore, we deeply value our role in contributing positively to the communities we operate in. Understanding that real estate is deeply intertwined with people and their livelihoods, we actively engage in community initiatives, champion local businesses, and participate in philanthropic endeavors that elevate the overall quality of life. By fostering strong community bonds and giving back to our neighborhoods, we aim to create inclusive and thriving communities where everyone can thrive. At Raja Roy Promoters, our mission extends far beyond mere transactions; it's about nurturing enduring relationships and leaving a lasting impact on the lives of our clients and the communities we serve.
@@ -283,7 +283,7 @@
 
                     </p>
                 </div>
-                <div class="col-lg-5 about-img" ><img src="./img/mission1.jpg"  class="img-fluid my-5 py-2  w-100 wow fadeInUp"
+                <div class="col-lg-6 about-img" ><img src="./img/mission1.jpg"  class="img-fluid my-5 py-2  w-100 wow fadeInUp"
                         data-wow-delay="0.1s" /></div>
             </div>
         </div>
@@ -294,7 +294,7 @@
                 <div class="text-center col-lg-12 py-1 my-2 wow fadeInUp" data-wow-delay="0.1s">
                     <h3 class="text-dark">OUR ETHICS & VALUES</h3>
                 </div>
-                <div class="col-lg-7 py-3  mb-1 wow fadeInUp" data-wow-delay="0.1s" style="margin-top: 20px;">
+                <div class="col-lg-6 py-3 mt-4 mb-1 wow fadeInUp" data-wow-delay="0.1s" style="margin-top: 20px;">
                     <p>Embodying unwavering ethics and values, our foundation at Raja Roy Promoters is built upon a steadfast commitment to integrity. Guided by principles of honesty, transparency, and ethical conduct, every decision and action we undertake is a testament to our dedication to operating with integrity at all times.
 
                         At the heart of our ethos lies a customer-centric approach, where our clients are not just clients but valued partners in our journey. We prioritize their needs, actively listen to their feedback, and consistently deliver on our promises, ensuring their utmost satisfaction and trust in our services.
@@ -308,7 +308,7 @@
                             
                             Beyond our developments, we actively engage with and give back to the communities we serve. Through supporting local initiatives and striving to make a positive impact, we aim to create inclusive and thriving communities that uplift and empower all individuals.</p>
                 </div>
-                <div class="col-lg-5 about-img"><img src="./img/values1.jpg"     class="img-fluid  w-100  my-5  wow fadeInUp"
+                <div class="col-lg-6 about-img"><img src="./img/values1.jpg"     class="img-fluid  w-100  my-5  wow fadeInUp"
                         data-wow-delay="0.1s" /></div>
             </div>
         </div>
