--- a/konapur-sadasivpet.html
+++ b/konapur-sadasivpet.html
@@ -189,11 +189,14 @@
                         <div class="section-title position-relative mb-4 pb-4">
                             <h1 class="mb-2">About Konapur Project</h1>
                         </div>
-                        <p class="mb-4">Konapur Project emerges as a flagship real estate endeavor, poised to redefine the landscape of contemporary living. Strategically located in a thriving neighborhood, this project offers a harmonious blend of urban convenience and suburban tranquility.</p>
+                        <p class="mb-4">Konapur Project becomes visible as an important thing real estate effort, ready to redefine the wide area of beautiful land of modern living.Well-located in a growing and successful neighborhood, this project offers a pleasing blend of city-based convenience and suburban peacefulness.</p>
 
-                            <p class="mb-4">Embracing the ethos of sustainable development, Konapur Project integrates eco-friendly features and green spaces, fostering a healthy and environmentally conscious lifestyle. Residents can immerse themselves in a wealth of recreational amenities.</p>
+                            <p class="mb-4">Supporting the belief system of helping the planet development, Konapur Project combines different things together so they work as one unit eco-friendly features and green spaces, helping the development of a healthy and related to surrounding conditions or the health of the Earth conscious way of living. Residents can put underwater themselves in a large number of recreational nice things to have.
+                            </p>
                             
-                            <p class="mb-4">At the heart of Konapur Project lies a commitment to fostering a sense of belonging and community spirit. Through engaging social activities, events, and shared spaces, residents are encouraged to forge meaningful connections and create lasting memories. 
+                            <p class="mb-4">At the heart of Konapur Project lies a loyalty to helping the development of a sense of belonging and community spirit, residents are encouraged to make important connections and memories by participating in engaging social activities, events, and shared areas.
+
+
                         </p>
 
                      
