--- a/mango-farm-house-sadashivpet.html
+++ b/mango-farm-house-sadashivpet.html
@@ -192,19 +192,9 @@
                         <div class="section-title position-relative mb-4 pb-4">
                             <h1 class="mb-2">About Mango Farm House</h1>
                         </div>
-                        <p class="mb-4">Mango Farm Home is our New Project in Sadashivpet, @ China
-                            Chelmeda Sangareddy Hyderabad on very close vicinity to Mumbai National Highway (NH65) with
-                            modern amenities and is in proximity to 13000 acres NIMZ Project, Woxsen University, IIT
-                            Hyderabad & MRF Factory near Mumbai national highway (NH65) which is the fastest growing
-                            investor's hub and is a home to several projects like Pepsi Co. Aurobindo Pharma, Kirby
-                            Toshiba, PebsPennar, MRF tyre, NIMZ, WOXSEN etc.</p>
+                        <p class="mb-4">Mango Farm Home is our New Project in Sadashivpet, @ China Chelmeda Sangareddy Hyderabad on very close vicinity to Mumbai National Highway (NH65) with modern amenities and is in proximity to 13000 acres NIMZ Project, Woxsen University, IIT Hyderabad & MRF Factory near Mumbai national highway (NH65) which is the fastest growing investor's hub and is a home to several projects like Pepsi Co. Aurobindo Pharma, Kirby Toshiba, PebsPennar, MRF tire, NIMZ, WOXSEN etc.</p>
 
-                        <p class="mb-4"> Designed to harmonize with the natural landscape, each farmhouse in the Mango
-                            Farm House Project is a testament to elegance and comfort. Whether it's a cozy weekend
-                            getaway or a permanent residence, residents can expect nothing short of opulence and
-                            sophistication. With thoughtfully crafted interiors and modern amenities, every aspect of
-                            the farmhouse is tailored to enhance the quality of life and provide a sanctuary for
-                            relaxation and rejuvenation.</p>
+                        <p class="mb-4"> Designed to harmonize with the natural landscape, each farmhouse in the Mango Farm House Project is a testament to elegance and comfort. Whether it's a cozy weekend getaway or a permanent residence, residents can expect nothing short of opulence and sophistication. With thoughtfully hand-made interiors and modern nice things to have, every aspect of the farmhouse is custom-designed to improve the quality of life and provide a safe place for relaxation and making young again.</p>
 
                        
 
