--- a/navya-milestone-sadasivpet.html
+++ b/navya-milestone-sadasivpet.html
@@ -189,17 +189,10 @@
                         <div class="section-title position-relative mb-4 pb-4">
                             <h1 class="mb-2">About Navya Mile Stone</h1>
                         </div>
-                        <p class="mb-4">Navya Milestone is our New Residential Layout in Sadashivapet @ Kamkole, 
-                            Sangareddy Hyderabad on very close vicinity to Mumbai National Highway 
-                            (Nh65) with modern amenities and is in proximity to 13000 Acres NIMZ 
-                            Project, Woxsen University, IIT Hyderabad & MRF Factory near Mumbai 
-                            national highway (NH65) which is the fastest growing investor’s hub and is a 
-                            home to several projects like Pepsi Co., Aurobindo Pharma, Kirby Toshiba, 
-                            PebsPennar, MRF tyres, NIMZ, WOXSEN etc</p>
+                        <p class="mb-4">Navya Milestone is our New Residential Layout in Sadashivapet @ Kamkole, Sangareddy Hyderabad on very close area to Mumbai National Highway (Nh65) with modern nice things to have and is close to 13000 Acres NIMZ Project, Woxsen University, IIT Hyderabad & MRF Factory near Mumbai national highway (NH65) which is the fastest growing business hub and is a home to the lot of projects like Pepsi Co., Aurobindo Pharma, Kirby Toshiba, PebsPennar, MRF tires, NIMZ, WOXSEN etc With a focus on (the ability to keep something around and community, Navya Milestone Project creates spaces that inspire harmony and well-being. From extremely carefully  created residences to full of life recreational areas, every aspect is custom-designed to raise up the quality of life for its residents. Start on a trip of modern living with Navya Milestone Project where every detail is hand-made to perfection, promising a life of getting what is wanted and richness.</p>
 
-                            <p class="mb-4"> With a focus on sustainability and community, Navya Milestone Project creates spaces that inspire harmony and well-being. From meticulously crafted residences to vibrant recreational areas, every aspect is tailored to elevate the quality of life for its residents. Embark on a journey of contemporary living with Navya Milestone Project
-                             where every detail is crafted to perfection, promising a life of fulfillment and prosperity.</p>
-                             <p class="mb-4">Navya Milestone Project sets a new standard in modern urban living, where architectural brilliance meets unparalleled comfort. This visionary real estate venture offers a diverse range of residential options, from sleek apartments to spacious villas, catering to various lifestyles and preferences. Nestled in prime locations, each unit boasts breathtaking views and convenient access to essential amenities, ensuring a life of convenience and luxury.</p>
+                            <p class="mb-4"> The Navya Milestone Project develops peaceful, well-being-promoting spaces that put community and sustainability first.Everything about it, from the tastefully decorated residences to the exciting entertainment options, is intended to enhance the quality of life for its residents.With Navya Milestone Project, you may go on a journey of modern living where every element is expertly designed to provide a prosperous and fulfilling existence.</p>
+                             <p class="mb-4">Navya Milestone Project sets a new standard in modern city-based living, where to designing and constructing beautiful buildings, structures brilliance meets unlike any other thing in the world of comfort. This intelligent real estate business offers a many different kinds of people range of where there are lots of homes options, from smooth and shiny apartments to big villas, being controlled by different ways of living and preferences. Lied down snugly in most important locations, each unit brags amazing views and convenient access to extremely important things to have, securing a life of convenience and expensive thing.</p>
 
 
 
