--- a/index.html
+++ b/index.html
@@ -955,8 +955,8 @@
                   src="img/team-1.jpg"
                   style="width: 50px; height: 50px"
                 />
-                <div class="ps-3">
-                  <h6 class="fw-bold mb-1">Balaji</h6>
+                <div class="ps-3 text-center">
+                  <h6 class="fw-bold mb-1">Nexon</h6>
                   <small>customer</small>
                 </div>
               </div>
@@ -979,7 +979,7 @@
                   src="img/client2.jpg"
                   style="width: 50px; height: 50px"
                 />
-                <div class="ps-3">
+                <div class="ps-3 text-center">
                   <h6 class="fw-bold mb-1">KAMALA</h6>
                   <small>customer</small>
                 </div>
@@ -1003,9 +1003,9 @@
                   src="img/client01.jpg"
                   style="width: 50px; height: 50px"
                 />
-                <div class="ps-3">
+                <div class="ps-3 text-center">
                   <h6 class="fw-bold mb-1">Tejeshwara Rao</h6>
-                  <small> Investor</small>
+                  <small>Investor</small>
                 </div>
               </div>
               <div
@@ -1025,10 +1025,10 @@
               <div class="d-flex align-items-center flex-column justify-content-center">
                 <img
                   class="img-fluid flex-shrink-0 rounded-circle"
-                  src="img/client01.jpg"
-                  style="width: 50px; height: 50px"
+                  src="img/kamlesh.jpg"
+                  style="width: 50px; height: 50px;object-fit: scale-down;"
                 />
-                <div class="ps-3">
+                <div class="ps-3 text-center">
                   <h6 class="fw-bold mb-1">kamalesh</h6>
                   <small> Customer</small>
                 </div>
@@ -1059,7 +1059,7 @@
                   src="img/testimonial-1.jpg"
                   style="width: 50px; height: 50px"
                 />
-                <div class="ps-3">
+                <div class="ps-3 text-center">
                   <h6 class="fw-bold mb-1">Deepika</h6>
                   <small>Customer</small>
                 </div>
@@ -1083,7 +1083,7 @@
                   src="img/team-4.jpg"
                   style="width: 50px; height: 50px"
                 />
-                <div class="ps-3">
+                <div class="ps-3 text-center">
                   <h6 class="fw-bold mb-1">Rambabu</h6>
                   <small> Investor</small>
                 </div>
