--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       <div class="container-xxl invest pt-5" style="background-color: #ffd041">
         <div class="container px-lg-5">
           <div class="row g-5 align-items-center">
-            <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="col-lg-7 wow fadeInUp mb-2" data-wow-delay="0.1s">
               <div class="section-title position-relative mb-4 pb-4">
                 <h2 class="mb-2">WELCOME TO THE RAJA ROY PRAMOTORS –</h2>
               </div>
