--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
       <!-- Full Screen Search End -->
 
       <!-- About Start -->
-      <div class="container-xxl invest pt-5" style="background-color: #ffd041">
-        <div class="container px-lg-5">
+      <div class="container-xxl invest pt-5" style="background-color: #ffd041;">
+        <div class="container pl-lg-5">
           <div class="row g-5 align-items-center">
             <div class="col-lg-7 wow fadeInUp mb-2" data-wow-delay="0.1s">
               <div class="section-title position-relative mb-4 pb-4">
