--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
 
                     </div>
                     <div class="col-lg-5">
-                        <img class="img-fluid wow zoomIn w-100 py-2" data-wow-delay="0.5s"
+                        <img class="img-fluid wow zoomIn w-100" data-wow-delay="0.5s"
                             src="./img/SIRPHOTO.png">
                     </div>
                 </div>
