--- a/completed-projects.html
+++ b/completed-projects.html
@@ -393,7 +393,7 @@
                         &copy; <a class="border-bottom" href="#">RAJA ROY PRAMOTORS</a> All Rights Reserved.
 
 
-                        <a href="privacy-policy.html">Privacy Policy</a> | Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns comapny.</a>
+                        <a href="privacy-policy.html">Privacy Policy</a> 
                     </div>
                    
                 </div>
