--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@
                 <div class="row">
                     <div class="col-md-12 text-center  mb-3 mb-md-0">Copyright
                         &copy; <a class="border-bottom" href="#">RAJA ROY PRAMOTORS</a> All Rights Reserved.
-                        <a href="privacy-policy.html">Privacy Policy</a> | Designed By <a class="border-bottom" href="https://www.thepatternscompany.com/">The Patterns comapny.</a>
+                        <a href="privacy-policy.html">Privacy Policy</a> 
                     </div>
                    
                 </div>
