--- a/completed-projects.html
+++ b/completed-projects.html
@@ -63,7 +63,7 @@
 
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Projects</a>
+                        <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Projects</a>
                         <div class="dropdown-menu m-0">
                             <a
                               href="./completed-projects.html"
@@ -86,7 +86,7 @@
                             <a href="./investments.html" class="dropdown-item">Investments</a>
                         </div>
                     </div>
-                    <a href="gallery.html" class="nav-item nav-link active">Gallery</a>
+                    <a href="gallery.html" class="nav-item nav-link ">Gallery</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                     <div class="nav-item dropdown book-free-visit">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Book A Free Visit</a>
