--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                         </div>
                         <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                         <a href="contact.html" class="nav-item nav-link active">Contact</a>
-                        <div class="nav-item dropdown book-free-visit">
+                        <!-- <div class="nav-item dropdown book-free-visit">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Book A Free Visit</a>
                             <div class="dropdown-menu m-0 free-visit">
                                 <div class="container">
@@ -126,7 +126,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </nav>
@@ -268,7 +268,7 @@
                                         type="text/javascript"></script>
                                 </div>
                             </form>
-                            <div id="thankYouMessage" style="display: none;color: white;font-size: 20px;">
+                            <div id="thankYouMessage" style="display: none;color: white;font-size: 3;">
                                 Thank you for contacting us!
                             </div>
                             <script type="text/javascript">
