--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             </div>
                           </div>
                         </form> -->
-                        <form method="post" class="c-form" action="//submit.form" onSubmit="return validateForm();">
+                        <form method="post" class="d-form" action="//submit.form" onSubmit="return validateForm();">
                           <div style="max-width: 400px;">
                           </div>
                           <div style="padding-bottom: 18px;">Enter Your Name Here<span style="color: red;">
@@ -171,7 +171,7 @@
                             }
                             // Show the thank you message and hide the form fields
                             document.getElementById('thankYouMessage').style.display = 'block';
-                            document.querySelector('form.c-form').style.display = 'none';
+                            document.querySelector('form.d-form').style.display = 'none';
 
                             return false; // Prevent form submission
                           }
